adding changes for getting altair to work properly

--- a/m5_mimic2/ROADMAP.ipynb
+++ b/m5_mimic2/ROADMAP.ipynb
@@ -13,7 +13,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from IPython.display import YouTubeVideo, display\n"
+    "from IPython.display import YouTubeVideo, display\n",
+    "YouTubeVideo(\"z0TQ01pbmHE\")"
    ]
   },
   {
