--- a/m5_mimic2/explore_mimic_data.ipynb
+++ b/m5_mimic2/explore_mimic_data.ipynb
@@ -36,7 +36,7 @@
     "import m5utils.emutils as em\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
-    "from dminteract.modules.m5 import *"
+    "from dminteract.modules.m5 import *\n"
    ]
   },
   {
