updated for jupyterlab 2.x

--- a/m5_mimic2/ROADMAP.ipynb
+++ b/m5_mimic2/ROADMAP.ipynb
@@ -21,6 +21,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Run the cell below to update the quizzes modules"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python -m pip install -U git+https://github.com/chapmanbe/dminteract#egg=dminteract"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Work through the notebooks in the following order\n",
     "\n",
     "1. [What Does MIMIC Look Like?](what_does_mimic_look_like.ipynb)\n",
@@ -49,7 +65,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
