--- a/m5_mimic2/explore_mimic_data.ipynb
+++ b/m5_mimic2/explore_mimic_data.ipynb
@@ -20,9 +20,7 @@
    "source": [
     "### you may need to install jinja2. To do so,\n",
     "# run this cell\n",
-    "!python -m pip install jinja2\n",
-    "!python -m pip install pyarrow\n",
-    "!python -m pip install -U git+https://github.com/chapmanbe/dminteract#egg=dminteract"
+    "#!python -m pip install -U git+https://github.com/chapmanbe/dminteract#egg=dminteract"
    ]
   },
   {
@@ -36,7 +34,8 @@
     "import m5utils.emutils as em\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
-    "from dminteract.modules.m5 import *\n"
+    "from dminteract.modules.m5 import *\n",
+    "from IPython.display import display"
    ]
   },
   {
@@ -142,7 +141,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
