--- a/m5_mimic2/multisubject_exploration.ipynb
+++ b/m5_mimic2/multisubject_exploration.ipynb
@@ -31,19 +31,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### you may need to install jinja2. To do so,\n",
-    "# run this cell\n",
-    "!python -m pip install jinja2\n",
-    "!python -m pip install pyarrow\n",
-    "!python -m pip install -U git+https://github.com/chapmanbe/dminteract#egg=dminteract"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import m5utils.aeutils as ae\n",
     "import ipywidgets as ipw\n",
     "import ipywidgets as ipw\n",
@@ -83,7 +70,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ae._debug"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ae._debug.value=\"\""
+   ]
   },
   {
    "cell_type": "code",
@@ -109,7 +107,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
