fixed import order; added some documentation

--- a/consumer_informatics/consumer_informatics_text_exploration.ipynb
+++ b/consumer_informatics/consumer_informatics_text_exploration.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exploring Text Data with a Consumer Lens\n",
+    "\n",
+    "### We need to install some software"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -24,7 +33,8 @@
     "from cycontext import ConTextComponent, ConTextItem\n",
     "from cycontext.viz import visualize_ent\n",
     "from spacy_readability import Readability\n",
-    "from IPython.display import display, HTML\n"
+    "from IPython.display import display, HTML\n",
+    "nlp = spacy.load(\"en_info_3700_i2b2_2012\")\n"
    ]
   },
   {
@@ -64,12 +74,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### We are only going to look at noteevents and these three columns"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "table = con.table('noteevents')['subject_id', 'text', 'category']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Think of some terms to search for sensitive information"
    ]
   },
   {
@@ -148,7 +172,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nlp = spacy.load(\"en_info_3700_i2b2_2012\")\n",
     "nlp.add_pipe(ruler)\n",
     "nlp.add_pipe(context)\n",
     "nlp.add_pipe(Readability())\n"
